--- a/Patient survey/index.html
+++ b/Patient survey/index.html
@@ -17,7 +17,7 @@
     <body>
 
        <div class="header">
-        <img src="/images/image001.png" alt="mjm logo">
+        <img src="images/image001.png" alt="mjm logo">
             <h1>Post Occupation Evaluation of <br> INSERT NAME HERE. <br> <u>Patient Survey</u> </h1>
             <p>
               <div class="progress-container">
