--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	<ul class="nav">
 		<li><a href="/Patient survey/index.html"> <h2><u>Patient<br> POE</u></h2></a></li>
     <li><a href="/Staff survey/index.html"> <h2><u>Staff<br> POE</u></h2></a></li>
-<br>
-<li><a href="thankyou.html"> <h2><u>Thankyou for submitting page<br> POE</u></h2></a></li>
+	<br>
+	<li><a href="thankyou.html"> <h2><u>Submission Complete</u></h2></a></li>
 	</ul>
 
 	</nav>
