--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
 	<nav class="banner-txt" id="banner-txt">
 	<ul class="nav">
-		<li><a href="/Patient survey/index.html"> <h2><u>Patient<br> POE</u></h2></a></li>
-    <li><a href="/Staff survey/index.html"> <h2><u>Staff<br> POE</u></h2></a></li>
+	<li><a href="/Patient survey/index.html" target="_blank"> <h2><u>Patient<br> POE</u></h2></a></li>
+    	<li><a href="/Staff survey/index.html" target="_blank"> <h2><u>Staff<br> POE</u></h2></a></li>
 	<br>
-	<li><a href="/Patient survey/thankyou.html"> <h2><u>Submission Complete</u></h2></a></li>
+	<li><a href="/Patient survey/thankyou.html" target="_blank"> <h2><u>Submission Complete</u></h2></a></li>
 	</ul>
 
 	</nav>
