--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<li><a href="/Patient survey/index.html" target="_blank"> <h2><u>Patient<br> POE</u></h2></a></li>
     	<li><a href="/Staff survey/index.html" target="_blank"> <h2><u>Staff<br> POE</u></h2></a></li>
 	<br>
-	<li><a href="/Patient survey/thankyou.html" target="_blank"> <h2><u>Submission Complete</u></h2></a></li>
+	<li><a href="/Patient survey/thankyou.html" target="_blank"> <h2><u>Submission Complete page</u></h2></a></li>
 	</ul>
 
 	</nav>
