--- a/Staff survey/index.html
+++ b/Staff survey/index.html
@@ -27,7 +27,7 @@
 
         <div class="intro">
             <p>This questionnaire asks questions about your perception of the work
-                environment and your work experience at (name of clinic).
+                environment and your work experience at INSERT NAME HERE.
                 Please select the number that most closely represents your level of agreement
                 with each statement below. We are interested in your honest opinions, whether
                 they are negative or positive. 
