--- a/Patient survey/index.html
+++ b/Patient survey/index.html
@@ -33,7 +33,7 @@
         <div class="intro">
             <p>This post occupation evaluation asks for your views about 
                 the physical environment and your experience at 
-                INSERT NAME HERE. 
+                <u><b>INSERT NAME HERE.</b></u>
                 Thinking about your recent visit to this clinic, 
                 please select the number that most closely represents 
                 your level of agreement with each statement below. 
