--- a/Patient survey/index.html
+++ b/Patient survey/index.html
@@ -826,7 +826,7 @@
          </label> 
       
          <label for="internal_temperature">
-          <li>How would you rate the equipment/furniture_meets_my_needs? </li>
+          <li>How would you rate the rate the internal temperature?</li>
           <input
               type="radio"
               id="question12"
