--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://www.example.com">
+    <meta http-equiv="refresh" content="0;url=http://mjmsurvey.rf.gd/">
     <title>Redirecting...</title>
 </head>
 <body>
